jdk 17, gradle wrapper 8.5, prepare version 0.2.0